<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tippy</string>
    <string name="action_settings">Settings</string>
    <string name="enter_bill_amount">Enter bill amount</string>
    <string name="button_enter">Enter</string>
    <string name="title_activity_select_tip">SelectTipActivity</string>
    <string name="ten_pct">10%</string>
    <string name="fifteen_pct">15%</string>
    <string name="twenty_pct">20%</string>
    <string name="divide_by">Divide by</string>

</resources>
