<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/enter_bill_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_bill_amount"
            android:inputType="numberDecimal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="calculateTip"
            android:text="@string/button_enter" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/ten_pct_radio"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/ten_pct" />

        <RadioButton
            android:id="@+id/fifteen_pct_radio"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/fifteen_pct" />

        <RadioButton
            android:id="@+id/twenty_pct_radio"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/twenty_pct" />
    </RadioGroup>

    <TextView
        android:id="@+id/total_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/divide_by_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/divide_by" />

        <EditText
            android:id="@+id/enter_num_people"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:inputType="number" />

        <Button
            android:id="@+id/divide_by_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:onClick="divideBy"
            android:text="@string/button_enter" />

    </LinearLayout>
    
    <TextView
        android:id="@+id/amount_per_person_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp" />

</LinearLayout>